# Teaching

./: README.md
CppSampleCodes/: AlgorithmDemo.cpp  CMakeLists.txt  MatMul.cpp  StandardLayoutTuple.cpp  file_io.cpp  filesystem_ts.cpp  image_demo.cpp  multithread_average.cpp  multithread_histogram.cpp  simple_integrator.cpp  simple_io_statistics.cpp  simple_io_statistics.txt  structured_io.cpp  structured_io.txt  time_measurement.cpp  vector.h  vector_functional.h
GPGPU1/: CMakeLists.txt  README.md
GPGPU1/C++/: CMakeLists.txt
GPGPU1/C++/MC-Pi/: CMakeLists.txt  MC-Pi-v1.cpp  MC-Pi-v2.cpp
GPGPU1/C++/NBody/cmake/: CMakeLists.txt
GPGPU1/C++/NBody/inc/: octree.hpp  particle.hpp
GPGPU1/C++/NBody/src/: manybody-c++-v1-parallel.cpp  manybody-c++-v1-serial.cpp  manybody-c++-v2-parallel.cpp  manybody-c++-v2-serial.cpp  manybody-c++-v3-parallel.cpp  manybody-c++-v3-serial.cpp  manybody-c++-v4-parallel.cpp  manybody-c++-v4-serial.cpp  manybody-c++-v5-parallel.cpp  manybody-c++-v5-serial.cpp  manybody-c++-v6-parallel.cpp  manybody-c++-v6-serial.cpp  manybody-c++-v7-parallel.cpp  manybody-c++-v7-serial.cpp
GPGPU1/CUDA/: CMakeLists.txt
GPGPU1/CUDA/CUDA-C++-API/: CMakeLists.txt
GPGPU1/CUDA/CUDA-C++-API/include/: CUDA-C++-API.hpp
GPGPU1/CUDA/CUDA-C++-API/source/: CUDA-C++-API.cu
GPGPU1/CUDA/DeviceInformation/: CMakeLists.txt  DeviceInformation.cu
GPGPU1/CUDA/EnumerateDevices/: CMakeLists.txt  EnumerateDevices.cu
GPGPU1/CUDA/atomics/: histogram.cu
GPGPU1/CUDA/culibraries/: cublas.cu  cufft.cu  curandpi.cu
GPGPU1/CUDA/matmul/: CMakeLists.txt  cpu_matmul.h  matmul_improved1.cu  matmul_improved2.cu  matmul_improved3.cu  matmul_naive.cu
GPGPU1/CUDA/nbody/: nbody_naive.cu  nbody_opt.cu  nbody_opt2.cu  nbody_opt_shared.cu
GPGPU1/CUDA/nbody-gl/: CMakeLists.txt  common.hpp  nbody_gl.cu
GPGPU1/CUDA/reduce/: CMakeLists.txt  reduce0.cu  reduce1.cu  reduce2.cu  reduce3.cu  reduce4.cu  reduce5.cu  reduce6.cu
GPGPU1/CUDA/saxpy/: CMakeLists.txt  saxpy.cu
GPGPU1/CUDA/saxpy_timed/: CMakeLists.txt  MeasureKernelExecution.cu
GPGPU1/CUDA/saxpy_timed_stream/: CMakeLists.txt  saxpy_timed_stream.cu
GPGPU1/CUDA/texturing/: input_image_link.txt  rotate.cu
GPGPU1/HIP/EnumerateDevices/: CMakeLists.txt  EnumerateDevices.hip.cpp
GPGPU1/OpenCL/: CMakeLists.txt
GPGPU1/OpenCL-C-API/: CMakeLists.txt
GPGPU1/OpenCL-C-API-minimal/: CMakeLists.txt
GPGPU1/OpenCL-C-API-minimal/include/: OpenCL-C-API-minimal-config.in.hpp
GPGPU1/OpenCL-C-API-minimal/source/: OpenCL-C-API-minimal.cpp
GPGPU1/OpenCL-C-API/inc/: OpenCL-C-API.h
GPGPU1/OpenCL-C-API/include/: OpenCL-C-API-config.in.h  OpenCL-C-API.h
GPGPU1/OpenCL-C-API/source/: OpenCL-C-API.c
GPGPU1/OpenCL-C-API/src/: OpenCL-C-API.c  OpenCL-C-API.cl
GPGPU1/OpenCL-GL/: CMakeLists.txt
GPGPU1/OpenCL-GL/Qt/: CMakeLists.txt
GPGPU1/OpenCL-GL/Qt/NBody/: CMakeLists.txt
GPGPU1/OpenCL-GL/SFML/: CMakeLists.txt
GPGPU1/OpenCL-GL/SFML/Schrodinger/: CMakeLists.txt
GPGPU1/OpenCL-GL/Schrodinger/: CMakeLists.txt
GPGPU1/OpenCL-GL/Schrodinger/include/: Schrodinger.hpp
GPGPU1/OpenCL-GL/Schrodinger/shader/: Schrodinger-fragment.glsl  Schrodinger-vertex.glsl
GPGPU1/OpenCL-GL/Schrodinger/source/: Schrodinger.cpp
GPGPU1/OpenCL-MatrixMul-C-API/: CMakeLists.txt  main.cpp  matmul.cl
GPGPU1/OpenCL-MatrixMul-C-API/include/: OpenCL-MatrixMul-C-API.hpp
GPGPU1/OpenCL-MatrixMul-C-API/source/: OpenCL-MatrixMul-C-API.cpp
GPGPU1/OpenCL/CBindings/EnumerateDevices/: CMakeLists.txt  EnumerateDevices.c
GPGPU1/OpenCL/CBindings/Texturing/: input_image_link.txt  sobel.cl  texture.cpp
GPGPU1/OpenCL/CBindings/atomics/: atomics.cl  histogram.cpp  input_image_link.txt
GPGPU1/OpenCL/CBindings/nbody_gl/: fragment.glsl  grav.cl  nbody_gl.cpp
GPGPU1/OpenCL/CBindings/reduce/: CMakeLists.txt  reduce0.cl  reduce0.cpp
GPGPU1/OpenCL/CppBindings/BLAS-GEMM/: BLAS-GEMM.cpp  CMakeLists.txt
GPGPU1/OpenCL/CppBindings/EnumerateDevices/: CMakeLists.txt  EnumerateDevices.cpp
GPGPU1/OpenCL/CppBindings/FFT-LPF/: CMakeLists.txt  FFT-LPF.cpp
GPGPU1/OpenCL/CppBindings/MC-Pi/: CMakeLists.txt  MC-Pi.cl  MC-Pi.cpp
GPGPU1/OpenCL/CppBindings/NBody/: CMakeLists.txt  NBody-v1.cl  NBody-v1.cpp  NBody-v2.cl  NBody-v2.cpp  NBody-v3.cl  NBody-v3.cpp  NBody-v4.cl  NBody-v4.cpp  NBody-v5.cl  common.hpp  particle.cl
GPGPU1/OpenCL/CppBindings/NBody-GLCL/: CMakeLists.txt  vertex.glsl
GPGPU1/OpenCL/CppBindings/Reduction/: CMakeLists.txt  Reduction.cl  Reduction.cpp
GPGPU1/OpenCL/CppBindings/SAXPY/: CMakeLists.txt  SAXPY.cl  SAXPY.cpp
GPGPU1/OpenCL/OpenCL-C++-API/: CMakeLists.txt
GPGPU1/OpenCL/OpenCL-C++-API/include/: OpenCL-C++-API.hpp
GPGPU1/OpenCL/OpenCL-C++-API/kernel/: saxpy.cl
GPGPU1/OpenCL/OpenCL-C-API-minimal/include/: OpenCL-C-API-minimal.hpp
GPGPU1/OpenCL/OpenCL-C-API-minimal/kernel/: squarer.cl
GPGPU1/OpenCL/OpenCL-C-API/source/: OpenCL-C-API.c
GPGPU1/OpenCL/OpenCL-MatrixMul-C-API/kernel/: matmul.cl
GPGPU1/OpenCL/OpenCL-Texture-C-API/: ThisIsWindowsOnlyAtTheMoment.txt  sobel.cl  texture.cpp
GPGPU1/OpenCL/clFFT-1D/: CMakeLists.txt
GPGPU1/OpenCL/clFFT-1D/include/: clFFT-1D.hpp
GPGPU1/OpenGL/: CMakeLists.txt
GPGPU1/OpenGL/Qt/: CMakeLists.txt
GPGPU1/OpenGL/SFML/: CMakeLists.txt
GPGPU1/SYCL/: CMakeLists.txt
GPGPU1/SYCL-GL/: CMakeLists.txt
GPGPU1/SYCL-GL/Qt/: CMakeLists.txt
GPGPU1/SYCL-MatrixMul/: CMakeLists.txt  matmul.cpp
GPGPU1/SYCL/SYCL-MatrixMul/: CMakeLists.txt
GPGPU1/Vulkan/: comp.spv  vecmul.comp  vk.cpp
GPGPU1/docs/: Ubuntu.md  Windows.md
GPGPU2/SPH/: CMakeLists.txt  Main.cpp
KutInf/: CMakeLists.txt
KutInf/app/: CMakeLists.txt
KutInf/app/inc/: header.hpp
KutInf/app/src/: main.cpp
KutInf/doc/: CMakeLists.txt
KutInf/doc/cmake/: UseLATEX.cmake
KutInf/doc/img/: elte.eps
KutInf/doc/plot/: CMakeLists.txt
KutInf/doc/src/: abeld.bst  latex_template.tex  nyilatkozat.tex  references.bib
KutInf/phys/: CMakeLists.txt
KutInf/phys/inc/: phys.hpp
KutInf/phys/src/: phys.cpp
KutInf_CTest/: CMakeLists.txt  Integrate.h  main.cpp  test1.cpp  test2.cpp
KutInf_Pipeline/: CMakeLists.txt  main.cpp
(+98 files in other folders)
