# Recurse into sample code directories
add_subdirectory(v1-serial)
add_subdirectory(v1-parallel)
add_subdirectory(v2-serial)
add_subdirectory(v2-parallel)
add_subdirectory(v3-serial)
add_subdirectory(v3-parallel)
add_subdirectory(v4-serial)
add_subdirectory(v4-parallel)
add_subdirectory(v5-serial)
add_subdirectory(v5-parallel)
add_subdirectory(v6-serial)
add_subdirectory(v6-parallel)
#add_subdirectory(v7-serial)
#add_subdirectory(v7-parallel)
